Fix every single thing you could possible think of